08/labs/ingress/home.yml
---
kind: Deployment 
apiVersion: apps/v1 
metadata: 
  name: home-deploy
  namespace: testns
spec: 
  replicas: 1
  selector:
    matchLabels:  
      name: home 
  template:
    metadata: 
      name: home-pod 
      labels:
        name: home 
    spec: 
      containers: 
        - name: home-container 
          image: httpd 
          ports: 
            - containerPort: 80
              protocol: TCP 

---
kind: Service 
apiVersion: v1 
metadata: 
  name: home-service 
  namespace: testns
spec: 
  type: ClusterIP
  selector: 
    name: home
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
