08/labs/ingress/ingress.yml
---
kind: Ingress 
apiVersion: networking.k8s.io/v1
metadata: 
  name: homepay-ingress 
  namespace: testns
spec:
  ingressClassName: nginx
  rules: 
    - http:
        paths: 
          - path: /
            pathType: Prefix 
            backend:
              service: 
                port: 
                  number: 80
                name: home-service
          - path: /pay
            pathType: Prefix 
            backend:
              service: 
                name: pay-service
                port: 
                  number: 80
